# oplist-opds

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: build.yml
src/: config.rs  error.rs  main.rs
src/handlers/: browse.rs  mod.rs  opensearch.rs  proxy.rs  root.rs  search.rs
src/opds/: entry.rs  feed.rs  mod.rs  xml.rs
src/openlist/: client.rs  mod.rs  types.rs
