[package]
name = "oplist-opds"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
compio = { version = "0.19.0-rc.1", features = ["macros"] }
cyper = { version = "0.9.0-rc.2", features = ["json", "rustls", "stream"], default-features = false }
cyper-axum = "0.9.0-rc.1"
figment = { version = "0.10.19", features = ["toml", "yaml", "json", "env"] }
quick-xml = { version = "0.39.3", features = ["serialize"] }
rustls = { version = "0.23.40", features = ["logging", "ring", "std", "tls12"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
snafu = { version = "0.9.0", features = ["futures"] }
time = { version = "0.3.47", features = ["formatting", "macros"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
